samples/_failures_safe/1761279291_d48374_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76c6ad92.c: In function ‘main’:
./samples/SAFE/__tmp_76c6ad92.c:147:5: error: expected declaration or statement at end of input
  147 |     if (a.rows == a.cols) {
      |     ^~
./samples/SAFE/__tmp_76c6ad92.c:147:5: error: expected declaration or statement at end of input
